--- a/index.Rmd
+++ b/index.Rmd
@@ -54,7 +54,7 @@ cls: IEEEtran
 
 <p style="color:red">NB! This protocol was efficient for the identification of particles under the stereo microscope but it needs to be adjusted if the samples will be used for the Raman. Digestion needs to be more efficient if the samples are used for the RAMAN. Since there can be a lot of sand in some samples a density separation might be applicable. If there is a lot of organic matter left on the filter digestion time/method might need to be adjusted.</p>
 
-# Equipment
+## Equipment
 
 
 * [Zooplankton net](https://www.nhbs.com/plankton-net-250mm-frame-32mm-filter?bkfno=184244) (100 µm mesh size)
@@ -73,13 +73,13 @@ cls: IEEEtran
 * Camera (Leica DMC 2900)
 
 
-## Reagents
+### Reagents
 
 * Hydrogen peroxide 10 % solution (NB: Use gloves and goggles! 282 ml of 35.5 % H2O2 up to 1 litre of MilliQ water. Filter with 0.22 um filter under the clean bench)
 * Potassium hydroxide 10 % solution (NB: Use gloves and goggles! 100 g of potassium pellets up to 1 litre of MilliQ water. Filter with 0.22 um filter under the clean bench)
 * MilliQ water
 
-# Preparations
+## Preparations
 
 Prior to sampling the sampling containers (1 l) and the Erlenmeyer flasks (250 ml) are washed with hot water, then two times with milliQ water and then once with milliQ water under the clean bench. 
 In correspondence with Dr. Joao Frias glass ware are treated like this:
@@ -92,7 +92,7 @@ The Erlenmeyer flasks have to be dried in the oven after rinsing to be able to t
 <p style="color:red">All the solutions which will be added to the samples have to be filtered under the clean bench with a 0.22 um filter.</p>
 
 
-# Sampling on board
+## Sampling on board
 
 Recorded parameters in the past were: 
 
@@ -117,7 +117,7 @@ The content of the net is flushed into a 1 litre plastic container.
 During sampling it is recommended wear clothing made of cotton and it is important not to use plastic ropes which could shed fibres during sampling. Monofilament cord or a metal wire is preferred.
 It is also important to make sure the net is not pulled under the boat to avoid contamination from the paint of the boat.
 
-# Blanks
+## Blanks
 
 Three different types of blanks are taken with each sampling/processing.
 
@@ -131,7 +131,7 @@ Three different types of blanks are taken with each sampling/processing.
 
 *Blank 3* is prepared by using three filters (checked under the stereo microscope for contamination before using it) which are placed in an open petri dish, wettened with MilliQ water and placed under the clean bench during processing. 
 
-# Processing in the laboratory
+## Processing in the laboratory
 
 <p style="color:red">NB: Authors from the baseman protocol recommend to not exceed an incubation temperature of more than 40 °C as well as not exceeding a concentration of 10 % for KOH and H2O2, however other protocols go above this temperature/time.</p>
 
@@ -143,32 +143,32 @@ The samples are then covered with aluminium foil, frozen at -70 °C and placed i
 
 The weight of the Erlenmeyer flasks should be taken once they reached room temperature. Subtract the recorded tare and document the mass of organic matter. 
 
-## Sample digestion
+### Sample digestion
 
 A sample pre-treatment consisting of digestion of the soft tissues in potassium hydroxide should be performed. 
 
-### 10 % KOH digestion
+#### 10 % KOH digestion
 
 At least 20 ml of 10 % potassium hydroxide solution is added to each flask (including blank). Make sure the entire sample is covered with solution (if there is a lot of organic material more solution might be needed to cover the material). The mixture is placed in a temperature-controlled oven at 40 °C. It is very important to not exceed this temperature. The treatment of the samples continues at 40 °C for a maximum of 72 hours.
 
-### 10 % H2O2 digestion
+#### 10 % H2O2 digestion
 
 Following the KOH digestion, if not all the matter was digested, an additional step, using hydrogen peroxide could be necessary. The same volume of hydrogen peroxide (10 % solution) as used in the previous step (potassium hydroxide) is added to the flask (if 20 ml of KOH solution was added in the first step, 20 ml of hydrogen peroxide should be added). Hydrogen peroxide solution is added to oxidize and digest the remaining material. The mixture is placed in a temperature-controlled oven at 40 °C for a maximum of 72 hours.
 
-### Density separation
+#### Density separation
 
 An additional density separation step can be added if there is a lot of sand/organic matter left on the filter. This can be carried out according to the Baseman protocol or any other applicable protocol.
 
-### Filtration of samples
+#### Filtration of samples
 
 To minimize the exposure of chemicals on the filter paper the mixture is first filtered through a 125 µm steel mesh (same as in the previous step). The remaining particles are then transferred onto a nitrocellulose filter. 
 
-### Storage of filters
+#### Storage of filters
 
 After the samples are on the filters are put into a sterile and labelled petri dish dried and kept at room temperature until dry. Once dry they can be closed with parafilm and stored in the freezer until microscopic observations. **If the samples are stored wet at room temperature mould can form on the filters**.
 
 
-# Identification 
+## Identification 
 
 Relevant criteria to take into consideration during identification include physical (size, type, colour) and chemical properties.
 Until now only stereo microscopic observations can be carried out at BioPol so only physical properties are included in the identification.
@@ -179,7 +179,7 @@ Each microplastic is photographed under the stereo microscope using the Leica ca
 3. Type: pellet, fragment, fibre, film, rope and filaments, microbeads (perfect spheres), sponge/foam, rubber
 4. Color: Black, blue, white, transparent, red, green, multicolour, others.
 
-# Reporting results
+## Reporting results
 
 Reporting units are extremely important to allow comparison among studies. The proposed reporting units for microplastics retrieved from water samples are:
 
@@ -193,7 +193,7 @@ The only unit making sense in our study so far is 2: No.MPs per volume (particle
 
 # Microplastic sampling and processing 2019 - Results
 
-## Size
+### Size
 
 During the entire sampling period of 2019 a total of 286 particles were detected and measured, both in the samples and the blanks. 232 particles were in the largest size class; bigger than 350 µm. 50 particles were between 100-350 µm and only 3 particles were smaller than 100 µm (thereof one fibre). All paint fragments were under 350 µm in the longest dimension and 21 of 40 fragments were under 350 µm. Size distribution of all detected particles are shown in the graph below. 
 
@@ -271,7 +271,7 @@ legend('topright', levels(as.factor(Mpmorph$Type)), fill=litir)
 
 ```
 
-## Colour
+### Colour
 
 The most dominant colour was blue (64 particles) followed by transparent (57 particles) and black (56 particles). Color distribution, including less abundant colors, is shown in the graph below.
 
@@ -303,7 +303,7 @@ legend('topright', rownames(gat), fill=rownames(gat))
 ```
 
 
-## Particles per sampling trip
+### Particles per sampling trip
 
 Sampling was carried out between April and October 2019 (total of 63 samples). Three samples were taken during each sampling trip (21 sampling trips). The average and standard deviation was calculated from each sampling trip and is shown in the graph below. 
 
@@ -355,7 +355,7 @@ box()
 #dev.off()
 ```
 
-## Particles per cubic meter per sampling week
+### Particles per cubic meter per sampling week
 
 From the number of particles found per sampling trip the number of particles per cubic meter was calculated and is shown in the graph 
 As described above, the number of particles per cubic meters is very low with a mean of 0.9 (± 0.7) particles per cubic meter. 
@@ -402,7 +402,7 @@ Since the mean particle number was around 1.3 (± 2.3) per sampling trip and the
 <p style="color:red">The number of detected MP particles must be well above blank samples!!!</p>
 
 
-## Improvements/Ideas
+### Improvements/Ideas
 
 1. Start finding a purpose of the monitoring programme, and set its aims!
  + If the purpose of the monitoring is to detect long-term trends, of microplastics in the marine environment, sediments might be the most suitable matrix since it is the sink where most particles will be sequestered (collect where MPs are likely to accumulate)
@@ -421,7 +421,7 @@ Since the mean particle number was around 1.3 (± 2.3) per sampling trip and the
 
 6. In addition to internal blanks, recoveries of reference particles in different size fractions and external QA procedures should be included
 
-## Other notes: 
+### Other notes: 
 
 * The abundance of microplastics, as for most other particles, increases exponentially with smaller sizes, and therefore all recent environmental risk assessment reports emphasize the role of smaller MP sizes
 * Studies show that data from surface water only (like with manta net) does not provide a complete picture of the amount of microplastics in water.
@@ -433,7 +433,7 @@ Since the mean particle number was around 1.3 (± 2.3) per sampling trip and the
 * The depth where water samples are being collected, or the sampling season can make a crucial difference in the amounts and types of organic material present in the samples -> affecting the selection of most suitable digestion methods.
 * The requirements for sample quality and purity are higher when aiming to analyze smaller particles 
 
-# Sampling and processing dates of 2019
+## Sampling and processing dates of 2019
 ```{r SamplingProcessingDates, message=FALSE, warning=FALSE, echo=FALSE, dev.args = list(bg = 'transparent'),dev = 'svg'}
 tafla <- read.csv("skjol/SamplingProcessingDates.csv",header = T,check.names=FALSE,fileEncoding="UTF-8-BOM")
 names(tafla) <- c("Sample ID","Sampling Date","Processing Date", "Put on Filter")
@@ -445,7 +445,7 @@ DT::datatable(tafla,caption = "Sampling and processing dates",rownames = F)
 ```
 
 
-## Efficiency of digestion
+### Efficiency of digestion
 
 Samples 901-906 could not be weighed as those samples were put onto a GF/C filter which seems to have lost weight after filtration. Hence samples 901-906 could not give us information about the digestion efficiency.
 Samples 907-909 were put onto a membrane filter (0.22 um) and samples 910-922 were put onto the normal Nitrocellulose filters. Weight was taken from all filters after they had been dried at room temperature for several weeks. 
